[tool.poetry]
name = "cartpole"
version = "0.1.0"
description = ""
authors = ["marekBouvet <marek.vetter@bouvet.no>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.0"
gym = "^0.26.2"
pygame = "^2.1.2"
Gymnasium = "^0.26.3"
box2d = {url = "https://github.com/pybox2d/pybox2d/archive/refs/tags/2.3.10.tar.gz"}
box2d-py = "^2.3.8"
numpy = "^1.23.5"
keras = "^2.11.0"
tensorflow = "^2.11.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
